<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/podcast_title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/podcast_back_image_view"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.98" />

    <TextView
        android:id="@+id/podcast_time_text_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:textAlignment="center"
        android:textColor="@color/ic_launcher_background"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/podcast_title_text_view"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/podcast_desc_text_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/podcast_time_text_view"
        app:layout_constraintWidth_percent="0.8" />

    <ImageView
        android:id="@+id/podcast_back_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:background="@android:color/holo_red_dark"
        android:scaleType="fitXY"
        android:src="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="1" />

    <ImageButton
        android:id="@+id/podcast_share_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:src="@drawable/content_share"
        app:layout_constraintEnd_toStartOf="@+id/podcast_play_image_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/podcast_play_image_button" />

    <ImageButton
        android:id="@+id/podcast_play_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:src="@drawable/content_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/podcast_download_image_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/podcast_share_image_button"
        app:layout_constraintTop_toBottomOf="@+id/podcast_desc_text_view" />

    <ImageButton
        android:id="@+id/podcast_download_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:src="@drawable/content_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/podcast_play_image_button"
        app:layout_constraintTop_toTopOf="@+id/podcast_play_image_button" />

    <TextView
        android:id="@+id/podcast_play_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/podcast_play"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/podcast_play_image_button"
        app:layout_constraintStart_toStartOf="@+id/podcast_play_image_button"
        app:layout_constraintTop_toBottomOf="@+id/podcast_play_image_button" />

    <TextView
        android:id="@+id/podcast_download_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/podcast_download"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/podcast_download_image_button"
        app:layout_constraintStart_toStartOf="@+id/podcast_download_image_button"
        app:layout_constraintTop_toBottomOf="@+id/podcast_download_image_button" />

    <TextView
        android:id="@+id/podcast_share_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/podcast_share"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/podcast_share_image_button"
        app:layout_constraintStart_toStartOf="@+id/podcast_share_image_button"
        app:layout_constraintTop_toBottomOf="@+id/podcast_share_image_button" />


</android.support.constraint.ConstraintLayout>